# panda-agi

./: .env.example  .gitignore  README.md  e2b.Dockerfile  example.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  publish-to-pypi.yml  test-backend.yml
client/: agent.py  models.py  websocket_client.py
docs/: README.md  chat-interface.mdx  cli.mdx  docs.json  installation.mdx  introduction.mdx  mint.json  package-lock.json  package.json  quickstart.mdx
docs/api-reference/: introduction.mdx
docs/apps/: chat-interface.mdx
docs/concepts/: agents.mdx  architecture.mdx  collect.mdx  environments.mdx  events.mdx  knowledge.mdx  skills.mdx  tools.mdx  traces.mdx  training.mdx
docs/examples/: chat-interface.mdx  cli.mdx
docs/tools/: overview.mdx
envs/: __init__.py  docker_env.py
examples/: cli.py  custom_handlers_demo.py  handler_types_demo.py  logs_handler_demo.py  quickstart.py
examples/ui/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
examples/ui/backend/: .env.example  Dockerfile  Makefile  conftest.py  e2b_main.py  main.py  main_new.py  pytest.ini  requirements.txt  test-requirements.txt
examples/ui/frontend/: .dockerignore  .env.example  (+5 more)
fastapi-server/backend/: main.py
fastapi-server/frontend/: package-lock.json
handlers/: __init__.py  base.py  default.py  file_system.py  image_generation.py  user_notification.py
panda-agi/: pyproject.toml
panda-agi/client/: agent.py
panda-agi/envs/: base_env.py  docker_env.py  local_env.py
panda-agi/handlers/: connection.py  shell_ops.py  web_navigation.py  web_search.py
panda_agi/: __init__.py  pyproject.toml
panda_agi/client/: agent.py  agent_executor.py  event_manager.py  models.py  panda_agi_client.py  response_processor.py  state.py  token_processor.py  websocket_client.py
panda_agi/environments/: e2b_env.py
panda_agi/envs/: __init__.py  base_env.py  docker_env.py  e2b_env.py  local_env.py  tmux_executor.py
panda_agi/handlers/: README.md  __init__.py  base.py  base_handler.py  connection.py  file_system.py  image_generation.py  logs_handler.py  registry.py  shell_ops.py  user_notification.py  web_ops.py
panda_agi/tools/: __init__.py  base.py  connection.py  custom_tool_executor.py  custom_tools.py  file_system.py  image.py  models.py  notification.py  registry.py  shell.py  skills.py  web.py
panda_agi/traces/: __init__.py  llm_call_trace.py  observe.py
panda_agi/train/: __init__.py  collect.py  conversation.py  llm_call_trace.py  training_model.py
tools/file_system/: shell_ops.py
tools/navigation/: beautifulsoup.py
(+161 files in other folders)
