[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[project]
name = "panda-agi"
version = "0.3.1"
description = "PandaAGI SDK"
authors = [
    {name = "Facundo Nicolas Maidana", email = "facundo@pandas-ai.com"},
    {name = "Gabriele Venturi", email = "gabriele@pandas-ai.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "docker",
    "asyncio",
    "python-dotenv",
    "beautifulsoup4",
    "requests",
    "markdownify",
    "websockets",
    "tavily-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["panda_agi"]