[build-system]
requires = ["hatchling", "uv"]
build-backend = "hatchling.build"

[project]
name = "panda-agi"
version = "0.7.0-beta.1"
description = "PandaAGI SDK"
authors = [
    {name = "Facundo Nicolas Maidana", email = "facundo@pandas-ai.com"},
    {name = "Gabriele Venturi", email = "gabriele@pandas-ai.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "docker",
    "python-dotenv",
    "beautifulsoup4",
    "requests",
    "markdownify",
    "httpx",
    "tavily-python",
    "e2b-code-interpreter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
e2b = ["e2b_code_interpreter"]

[tool.hatch.build]
exclude = [
    "/docs",
    "/examples",
    "my_agent_workspace",
    "panda_agi/tests",
    "**/.DS_Store"
]

[tool.hatch.build.targets.wheel]
packages = ["panda_agi"]
